# inseminator

./: .coveragerc  .gitignore  MANIFEST.in  Makefile  pyproject.toml  readme.md  setup.cfg  setup.py  tests-requirements.in  tests-requirements.txt  tox.ini
.github/workflows/: pythonpackage.yml  pythonpublish.yml
docs/: basic_usage.rst  conf.py  default_parameters.rst  enforced_parameters.rst  index.rst  injecting_functions.rst  installation.rst  introduction.md
docs/api/: container.rst  decorator.rst  dependency.rst  exceptions.rst  index.rst  metrics.rst  resolver.rst  scoped_dict.rst
examples/: basic.py  basic_against_interface.py  decorator.py  enforced_parameters.py
examples/celery-example/: .env  alembic.ini  pyproject.toml  readme.md  requirements.in  requirements.txt
examples/celery-example/alembic/: env.py
examples/celery-example/alembic/versions/: 04658d0dab42_create_cow_table.py
examples/celery-example/src/: celery_factory.py  configuration.py  cow_repository.py  database.py  domain.py  models.py  random_name_api_client.py  task.py
inseminator/: __init__.py  base_settings.py  container.py  decorator.py  dependency.py  exceptions.py  metrics.py  resolver.py  scoped_dict.py
inseminator/integrations/: __init__.py  celery.py
src/: __init__.py  container.py  decorator.py  dependency.py  exceptions.py  injector.py  resolver.py  scoped_dict.py
src/integrations/: __init__.py  celery.py
tests/: test_big_dependency_tree.py  test_celery_inejector.py  test_celery_injector.py  test_container.py  test_decorator.py  test_examples.py  test_injector.py  test_new_type.py  test_pydantic.py
